fix(side panel): Wrap long iteration titles.

--- a/src/app/work-item/work-item-list/work-item-list.component.scss
+++ b/src/app/work-item/work-item-list/work-item-list.component.scss
@@ -19,6 +19,7 @@
 }
 .side-panel-container {
     background-color: $color-pf-black-900;
+    overflow-x: hidden;
 }
 .work-item-list-page {
   >.list-group
